fixed v6
